# Galaster

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.org  bezier.cc  gengraph.sh  geometry.cc  graph.hh  layer.hh  layout.hh  main.cc  prop.hh  render.hh  test.cc  testgraph.hh  vec3d.cc  vec3d.hh  verify.hh  vertex_edge.hh
examples/: CMakeLists.txt  Makefile  binary_tree.cc  crawler.cc  cube.cc  label.cc  membrane.cc  multiedge.cc  randflower.cc  random.cc  randspline.cc  splineorama.cc  splineorama2.cc  template.cc
src/: CMakeLists.txt  font.cc  font.hh  galaster.cc  galaster.hh  geometry.cc  glyph.cc  graph.hh  layer.hh  layout.hh  prop.cc  prop.hh  render.hh  rwlock.hh  spatial_octree.hh  test.cc  vec3d.cc  vec3d.hh  vertex_edge.hh
